correccion de errores

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      <section id="home" class="fx-column fx-content-center fx-align-items-center">
 
       <div class="home-banner fx-column fx-content-center fx-align-items-center">
-        <h1>Beta Residencial</h1>
+        <h1>Residencial</h1>
         <h3>Bienvenidos a nuestro sitio de desarrollores ISI</h3>
         <p>Consequat nostrud nisi ut consequat magna id consectetur et minim ex proident cillum.</p>
       </div>
